fix: pages, header

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="bg-dark text-light p-2 border-top border-light-transparent border-md">
+<div class="bg-dark text-light p-2 border-top border-light border-md">
   <div class="container-fluid">
     <div class="row align-items-end">
       <div class="col-6">
