--- a/src/app/components/recipe-search-bar/recipe-search-bar.component.html
+++ b/src/app/components/recipe-search-bar/recipe-search-bar.component.html
@@ -1,14 +1,9 @@
-<form #formElement="ngForm" (ngSubmit)="searchRecipe()" class="pb-1 pl-1">
-  <div class="row no-gutters">
-    <div class="col-1 d-flex justify-content-end">
-      <button [disabled]="formElement.invalid" class="btn btn-sm btn-light" type="submit">
-        <fa name="search"></fa>
-      </button>
-    </div>
-    <div class="col-11">
-      <input #loginElement="ngModel" [(ngModel)]="userSearch" class="form-control form-control-sm" id="userSearch"
-             minlength="3"
-             name="userSearch" placeholder="Enter recipe, ingredient, ... (you can try cookie, tart, poulet)" required type="text">
-    </div>
-  </div>
+<form #formElement="ngForm" (ngSubmit)="searchRecipe()" [class.border-grey]="mouseIn"
+      class="border border-light border-md rounded-pill bg-light py-1">
+  <button [disabled]="formElement.invalid" class="btn btn-sm" style="width: 6%" type="submit">
+    <fa name="search"></fa>
+  </button>
+  <input #loginElement="ngModel" [(ngModel)]="userSearch" class="border-0 bg-transparent align-middle"
+         id="userSearch" minlength="3" name="userSearch" placeholder="Search a recipe, ingredient, ... (you can try cookie, tart, poulet)"
+         required style="width: 94%" type="text">
 </form>
