--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,1 +1,5 @@
-
+#user-icon:hover {
+  transition-duration: 300ms;
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  color: #262626!important;
+}
