--- a/src/app/components/recipe-result/recipe-result.component.html
+++ b/src/app/components/recipe-result/recipe-result.component.html
@@ -1,19 +1,26 @@
-<div class="border border-dark rounded p-2" style="background: rgba(255,255,255,0.20);backdrop-filter: blur(3px);">
-  <div [routerLink]="'/recipe-details/'+recipe.idRecipe">
-    <h4>{{recipe.nameRecipe}} (
-      <app-recipe-avg-rate [idRecipe]="recipe.idRecipe"></app-recipe-avg-rate>
-      /5)
-    </h4>
-    {{recipe.recipeType}} for {{recipe.persons}} persons ({{recipe.prepTime}} min)<br>
-    {{recipe.summary}}
+<div class="container-fluid border-top border-grey p-2" style="background: rgba(255,255,255,0.20);backdrop-filter: blur(3px);">
+  <div class="row" [routerLink]="'/recipe-details/'+recipe.idRecipe">
+    <div class="col">
+      <h4>{{recipe.nameRecipe}} (
+        <app-recipe-avg-rate [idRecipe]="recipe.idRecipe"></app-recipe-avg-rate>
+        /5)
+      </h4>
+      {{recipe.recipeType}}, {{recipe.persons}} servings ({{recipe.prepTime}} min)<br>
+      {{recipe.summary}}
+    </div>
   </div>
-  <div class="row pr-3">
-    <i class="col-9 ">posté on {{recipe.postDate}} by <b>{{recipe.pseudo}}</b></i>
-
-    <ng-container
-      *ngIf="this._authService.currentUserValue && (this._authService.currentUserValue.userType || _authService.currentUserValue.idUser === recipe.idUser)">
-      <button (click)="deleteRecipe()" class="col-3">Delete recipe
-      </button>
-    </ng-container>
+  <div class="row">
+    <div class="col">
+      Posted on {{recipe.postDate | date}} by <b>{{recipe.pseudo}}</b>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col text-right">
+      <ng-container
+        *ngIf="this._authService.currentUserValue && (this._authService.currentUserValue.userType || _authService.currentUserValue.idUser === recipe.idUser)">
+        <button (click)="deleteRecipe()" class="col-3 mt-3 btn btn-sm btn-dark">Delete recipe
+        </button>
+      </ng-container>
+    </div>
   </div>
 </div>
