--- a/src/app/components/review-form/review-form.component.html
+++ b/src/app/components/review-form/review-form.component.html
@@ -1,18 +1,26 @@
-<form [formGroup]="_form" (ngSubmit)="postReview()">
-
-<form *ngIf="authService.currentUserValue" [formGroup]="form" (ngSubmit)="postReview()">
+<form (ngSubmit)="postReview()" *ngIf="authService.currentUserValue" [formGroup]="form">
   <div class="row">
-
-    <label class="col-4 text-left" for="review">Review : </label>
-    <label class="col-3" for="rate">Rating (X/5): </label>
   </div>
   <div class="row">
-
-
-    <textarea class="col-4 ml-2" id="review" formControlName="review">
-    </textarea>
-    <input class="col-1 ml-4" id="rate" type="number" min="0" max="5" formControlName="rate">
-    <button class="text-lg-center ml-5 btn-dark" [disabled]="!_form.valid">Post review</button>
+    <div class="col-6">
+      <label class="text-left" for="review">How was it?</label>
+    </div>
+    <div class="col-3">
+      <label class="" for="rate">Rating:</label>
+    </div>
+    <div class="col-2">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-6">
+      <textarea class="form-control input-group-sm" formControlName="review" id="review"></textarea>
+    </div>
+    <div class="col-2">
+      <input class="col-3 form-control input-group-sm" formControlName="rate" id="rate" max="5" min="0" type="number">
+    </div>
+    <div class="col-4">
+      <button [disabled]="!_form.valid" class="text-lg-center ml-5 btn btn-sm btn-dark">Post review</button>
+    </div>
   </div>
 
 </form>
