fix: login modal, improve user profile, recipe details, recipe create and recipe search pages

--- a/src/app/components/account-modal/account-modal.component.html
+++ b/src/app/components/account-modal/account-modal.component.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div aria-hidden="true" aria-labelledby="accountModalLabel" class="modal fade pl-0" id="accountModal" role="dialog"
+<div aria-hidden="true" aria-labelledby="accountModalLabel" class="modal fade pr-0 pl-0" id="accountModal" role="dialog"
      tabindex="-1">
   <div class="modal-dialog d-flex h-100 align-items-center" role="document">
     <div class="container-fluid">
@@ -9,7 +9,7 @@
             <div class="modal-header bg-dark shadow-sm">
               <h5 class="modal-title font-weight-bold text-light" id="accountModalLabel">Account</h5>
               <button aria-label="Close" class="close" data-dismiss="modal" type="button">
-                <fa name="close" size="1x"></fa>
+                <fa class="text-white" name="close" size="1x"></fa>
               </button>
             </div>
             <div class="modal-body">
