--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,11 @@
+<app-account-modal></app-account-modal>
+
 <div class="bg-dark pt-3 pb-1 border-bottom border-light border-md">
   <div class="container-fluid">
     <div class="row mb-3">
 
-      <div class="col-sm-6 offset-sm-3 d-none d-md-block d-flex text-center">
-        <img class="img-fluid mx-auto" routerLink="" src="../../../assets/img/cuisineHELHa_logo.png"
+      <div class="col-sm-6 offset-sm-3 d-none d-md-block d-flex text-center justify-content-center">
+        <img id="logo" class="img-fluid mx-auto" routerLink="" alt="logo" src="../../../assets/img/cuisineHELHa_logo.png"
              style="width: 85%;height: auto; max-width: 415px">
       </div>
 
@@ -19,6 +21,5 @@
         <app-recipe-search-bar></app-recipe-search-bar>
       </div>
     </div>
-
   </div>
 </div>
