--- a/src/app/components/pages/recipe-search/recipe-search.component.html
+++ b/src/app/components/pages/recipe-search/recipe-search.component.html
@@ -20,10 +20,12 @@
     </div>
     <div class="row">
       <div class="col">
-        <h3>Results for "{{searchText}}"</h3>
-        <div *ngFor="let recipe of filteredRecipes" class="text-left mb-3">
-          <app-recipe-result (recipeDeleted)="deleteRecipeInDB($event)" [recipe]="recipe"></app-recipe-result>
-        </div>
+        <h3 class="mb-2"><b>Results for "{{searchText}}"</b></h3>
+        <ng-container *ngFor="let recipe of filteredRecipes">
+          <div class="text-left pt-3 mb-2 border-top border-grey p-2">
+            <app-recipe-result (recipeDeleted)="deleteRecipeInDB($event)" [recipe]="recipe"></app-recipe-result>
+          </div>
+        </ng-container>
       </div>
     </div>
   </div>
