fix: login modal, improve user profile, recipe details, recipe create and recipe search pages

--- a/src/app/components/authenticated-interface/authenticated-interface.component.html
+++ b/src/app/components/authenticated-interface/authenticated-interface.component.html
@@ -25,7 +25,7 @@
   </div>
   <div class="row mt-2">
     <div class="col d-flex justify-content-center">
-      <h6 (click)="authService.logout()" *ngIf="isLoggingOut" class="text-success font-weight-bold ml-3" routerLink="/home">
+      <h6 (click)="authService.logout(); this.hideModal();" *ngIf="isLoggingOut" class="text-success font-weight-bold ml-3" routerLink="/home">
         Click here to confirm.
       </h6>
     </div>
