--- a/src/app/components/pages/user-details/user-details.component.html
+++ b/src/app/components/pages/user-details/user-details.component.html
@@ -66,6 +66,7 @@
     </div>
 
     <h2 class="ml-2 mb-2 text-center"><b>Your recipes</b></h2>
+    <h5 *ngIf="!recipes || !recipes.length" class="mt-2">You have not shared a recipe yet.</h5>
     <ul>
       <ng-container *ngFor="let recipe of recipes">
         <li class="mb-2 border-grey border-bottom w-75">
@@ -80,6 +81,7 @@
     </ul>
 
     <h2 class="ml-2 mb-2 text-center"><b>Comments you posted</b></h2>
+    <h5 *ngIf="!reviews || !reviews.length" class="mt-2">You have not commented yet.</h5>
     <div class="mx-2">
       <ng-container *ngFor="let review of reviews">
         <a [routerLink]="'/recipe-details/'+review.idRecipe">
