--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,10 @@ input:focus, textarea:focus, select:focus {
   border-color: #e9e9e9;
 }
 
+.border-sm {
+  border-width: 0.12em !important;
+}
+
 .border-md {
   border-width: 0.18em !important;
 }
