--- a/src/app/components/pages/recipe-search/recipe-search.component.css
+++ b/src/app/components/pages/recipe-search/recipe-search.component.css
@@ -1,5 +1,4 @@
 .home-img{
-  background-image: url("../../../../assets/img/accueil.jpg");
+  background-image: url("../../../../assets/img/accueil.jpeg");
   background-size: cover;
-  min-height: 550px;
 }
