--- a/src/app/components/recipe-search-bar/recipe-search-bar.component.html
+++ b/src/app/components/recipe-search-bar/recipe-search-bar.component.html
@@ -1,5 +1,5 @@
 <form #formElement="ngForm" (ngSubmit)="searchRecipe()" [class.border-grey]="mouseIn"
-      class="border border-light border-md rounded-pill bg-light py-1 transition-1s">
+      class="border border-light border-lg rounded-pill bg-light py-1 transition-250ms">
   <button [disabled]="formElement.invalid" class="btn btn-sm" style="width: 6%" type="submit">
     <fa name="search"></fa>
   </button>
