--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,8 +1,10 @@
 <div class="container-fluid col-lg-12 home-img p-3">
-  <h1 class="text-white">Recipe of the month</h1>
+  <div class="bg-dark-neutral fit-content px-3 py-2 mb-3 border-bottom border-lg shadow border-light rounded">
+    <h1 class="text-white align-middle d-inline">Recipe of the month</h1>
+  </div>
 
   <ng-container *ngIf="frontRecipeObs | async as recipe">
-    <div [routerLink]="'/recipe-details/'+recipe.idRecipe" class="card mb-3 bg-white">
+    <div [routerLink]="'/recipe-details/'+recipe.idRecipe" class="card p-2 mb-3 bg-white border border-grey border-md shadow">
       <div class="row no-gutters">
         <div class="col-sm-4">
           <img alt="A tart" class="card-img" src="../../../../assets/picture/tarteCitron.jpg">
