--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@ input:focus, textarea:focus, select:focus {
 }
 
 .border-lg {
-  border-width: 0.24em !important;
+  border-width: 0.22em !important;
 }
 
 .bg-dark {
@@ -43,7 +43,7 @@ input:focus, textarea:focus, select:focus {
 }
 
 .bg-dark-neutral {
-  background-color: #303030 !important;
+  background-color: #393939 !important;
 }
 
 .border-light {
@@ -68,4 +68,9 @@ input:focus, textarea:focus, select:focus {
 
 .transition-1s {
   transition-duration: 1000ms;
+}
+
+.fit-content{
+  width: fit-content;
+  height: fit-content;
 }
